Generates two numbers. User can input answer. Need to put in timer and get keyboard to stay visible.

--- a/mathlete/res/layout/activity_main.xml
+++ b/mathlete/res/layout/activity_main.xml
@@ -9,8 +9,56 @@
     tools:context=".MainActivity" >
 
     <TextView
+        android:id="@+id/number_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_above="@+id/user_answer"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="27dp"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/number_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="28dp"
+        android:layout_marginTop="23dp"
+        android:layout_toLeftOf="@+id/number_1"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <EditText
+        android:id="@+id/user_answer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/number_2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
+        android:ems="10"
+        android:inputType="number" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/user_answer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:onClick="on_submit"
+        android:text="Submit answer" />
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/number_2"
+        android:layout_alignRight="@+id/number_1"
+        android:layout_below="@+id/number_1"
+        android:layout_marginTop="25dp"
+        android:max="100"
+        android:maxWidth="150dp" />
 
 </RelativeLayout>
