--- a/mathlete/res/layout/activity_main.xml
+++ b/mathlete/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit answer" />
+        android:text="Submit answer"
+        android:onClick="on_submit" />
 
 </LinearLayout>
