--- a/mathlete/res/drawable/countdown_bar.xml
+++ b/mathlete/res/drawable/countdown_bar.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Taken from: http://stackoverflow.com/questions/2819778/custom-drawable-for-progressbar-progressdialog -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@android:id/background">
