--- a/mathlete/res/layout/base_exercise_activity.xml
+++ b/mathlete/res/layout/base_exercise_activity.xml
@@ -7,6 +7,7 @@
 	 >
 
     <LinearLayout
+        android:id="@+id/numbers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -39,7 +40,7 @@
     />
 
     <EditText
-        android:id="@+id/user_answer"
+        android:id="@+id/user_answer_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -54,6 +55,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit answer"
-        android:onClick="on_submit" />
+        android:onClick="onSubmit" />
 
 </LinearLayout>
