Refactored. Changed exercises to be fragments instead of activities. Todo: save state when exercise is stopped.

--- a/mathlete/res/layout/base_exercise_activity.xml
+++ b/mathlete/res/layout/base_exercise_activity.xml
@@ -54,7 +54,6 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit answer"
-        android:onClick="onSubmit" />
+        android:text="Submit answer" />
 
 </LinearLayout>
