--- a/mathlete/res/xml/preferences.xml
+++ b/mathlete/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 	<ListPreference 
-	    android:key="pref_difficulty"
+	    android:key="@string/pref_difficulty"
 	    android:title="@string/pref_difficulty_title"
 	    android:summary="@string/pref_difficulty_summary"
 	    android:entries="@array/pref_difficulty_entries"
