--- a/mathlete/res/layout/base_exercise_activity.xml
+++ b/mathlete/res/layout/base_exercise_activity.xml
@@ -6,27 +6,10 @@
     android:orientation="vertical"
 	 >
 
-    <LinearLayout
-        android:id="@+id/numbers"
+    <WebView
+        android:id="@+id/webView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:gravity="center" >
-
-        <TextView
-            android:id="@+id/number_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/number_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </LinearLayout>
+        android:layout_height="96dp" />
 
     <ProgressBar
         android:id="@+id/countdownBar"
