--- a/mathlete/res/menu/main.xml
+++ b/mathlete/res/menu/main.xml
@@ -6,11 +6,16 @@
         android:title="@string/action_help"
         />
     
+    <item 
+        android:id="@+id/action_log"
+        android:showAsAction="ifRoom"
+        android:title="@string/action_log"/>
+    
     <item
         android:id="@+id/action_settings"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    
+
     <item 
         android:id="@+id/action_about"
         android:showAsAction="never"
