--- a/mathlete/res/layout/user_log_graph.xml
+++ b/mathlete/res/layout/user_log_graph.xml
@@ -38,6 +38,12 @@
 	        android:layout_height="wrap_content"
 	        android:text="TextView" />
 	    
+	   	<TextView
+	        android:id="@+id/user_answer_tv"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="TextView" />
+	    
 	    <TextView
 	        android:id="@+id/problem_start_datetime_tv"
 	        android:layout_width="wrap_content"
