--- a/mathlete/res/layout/user_log_graph.xml
+++ b/mathlete/res/layout/user_log_graph.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/graph"
+        android:orientation="vertical"/>
     <LinearLayout
         android:id="@+id/problem_info"
         android:layout_width="wrap_content"
